<resources>
    <string name="app_name">Heros Details</string>
    <string name="add">Add</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="enter_name">Enter name</string>
    <string name="email">Email</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="sign_up">Signup</string>
    <string name="enter_hero_name">Enter Hero name</string>
    <string name="enter_birth_year">Enter Birth Year</string>
    <string name="actor">Actor</string>
    <string name="education">Education</string>
    <string name="nick_name">Nick name</string>
    <string name="submit">Submit</string>
</resources>